FINERACT-2326: Upgrade to JDK21